# niri-sorceress

./: Cargo.toml  flake.nix
src/: icon.rs  main.rs
