[package]
name = "sorceress"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-icons = "0.4.0"
niri-ipc = "26.4.0"
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["full"] }
xdg = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
